# pdfgenrs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  RUST_AUDIT.md  SECURITY.md  docker-compose.yml
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: analyze.yml  build.yml  criterion-benchmark.yml  pull-requests.yml  release-drafter.yml  release-image.yml
benches/: criterion_bench.rs  performance.rs
data/pale-2/: pale-2.json
data/syfosoknader/: arbeidstakere.json
dev/bench/: data.js
dev/criterion-report/html_to_pdf/base/: benchmark.json  estimates.json  sample.json  tukey.json
dev/criterion-report/html_to_pdf/change/: estimates.json
dev/criterion-report/html_to_pdf/new/: estimates.json  sample.json  tukey.json
dev/criterion-report/html_to_pdf/report/: index.html
dev/criterion-report/image_to_pdf_png/base/: estimates.json  sample.json  tukey.json
dev/criterion-report/image_to_pdf_png/change/: estimates.json
dev/criterion-report/image_to_pdf_png/new/: benchmark.json  estimates.json  sample.json  tukey.json
dev/criterion-report/image_to_pdf_png/report/: index.html
dev/criterion-report/report/: index.html
dev/criterion-report/typst_to_pdf_simple/base/: estimates.json  sample.json  tukey.json
dev/criterion-report/typst_to_pdf_simple/change/: estimates.json
dev/criterion-report/typst_to_pdf_simple/new/: benchmark.json  estimates.json  sample.json  tukey.json
dev/criterion-report/typst_to_pdf_simple/report/: index.html
dev/criterion-report/typst_to_pdf_with_data/base/: estimates.json  sample.json  tukey.json
dev/criterion-report/typst_to_pdf_with_data/change/: estimates.json
dev/criterion-report/typst_to_pdf_with_data/new/: benchmark.json  estimates.json  sample.json  tukey.json
dev/criterion-report/typst_to_pdf_with_data/report/: index.html
ironpress/: .cargo_vcs_info.json  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  codecov.yml
ironpress/benches/: conversion.rs
ironpress/playground/: index.html  ironpress.d.ts  ironpress.js  ironpress_bg.wasm
ironpress/playground/parity/: index.html
ironpress/scripts/: bump-version.sh  compare-parity.sh  generate-references.sh  render-fixtures.sh
ironpress/src/: bidi.rs  cli.rs  error.rs  fonts.rs  lib.rs  system_fonts.rs  text.rs  types.rs  util.rs
ironpress/src/layout/: block.rs  context.rs  engine.rs  flex.rs  grid.rs  helpers.rs  images.rs  inline.rs  math.rs  mod.rs  paginate.rs  table.rs  text.rs
ironpress/src/parser/: dom.rs  html.rs  jpeg.rs  markdown.rs  math.rs  mod.rs  png.rs  svg.rs  ttf.rs
ironpress/src/parser/css/: imports.rs  inline.rs  lightning.rs  media.rs  mod.rs  model.rs  page.rs  rules.rs  selectors.rs  selectors_tests.rs  values.rs  values_tests.rs
ironpress/src/render/: background.rs  mod.rs  pdf.rs  pdf_fonts.rs  shading.rs  svg_geometry.rs  svg_to_pdf.rs
ironpress/src/render/pdf/: layout_elements.rs
ironpress/src/security/: sanitizer.rs
ironpress/src/style/: computed.rs  defaults.rs  mod.rs  resolve.rs  resolve_tests.rs
ironpress/tests/: parity_tests.rs  pdf_smoke_tests.rs  proptest_properties.rs
ironpress/tests/fixtures/: baseline.json
ironpress/tests/fixtures/combined/: article.html  dashboard.html  invoice.html  math-paper.html  resume.html  simple-report.html
ironpress/tests/fixtures/edge-cases/: deep-nesting.html  empty-elements.html  long-table.html  overflow.html  page-breaks.html  unicode.html
ironpress/tests/fixtures/expectations/: combined_article.json  combined_dashboard.json  combined_invoice.json  combined_math-paper.json  combined_resume.json  combined_simple-report.json  edge-cases_deep-nesting.json  edge-cases_empty-elements.json  edge-cases_long-table.json  edge-cases_overflow.json  edge-cases_page-breaks.json  edge-cases_unicode.json  features_backgrounds-advanced.json  features_box-model.json  features_colors-backgrounds.json  features_flexbox.json  features_grid.json  features_images-svg.json  features_math.json  features_positioning.json  features_pseudo-elements.json  features_tables.json  features_transforms.json  features_typography.json
ironpress/tests/fixtures/features/: backgrounds-advanced.html  box-model.html  colors-backgrounds.html  flexbox.html  grid.html  images-svg.html  math.html  positioning.html  pseudo-elements.html  tables.html  transforms.html  typography.html
src/: config.rs  html.rs  http_tracing.rs  lib.rs  logging.rs  main.rs  metrics.rs  pdf.rs  performance_test.rs  request_id.rs  state.rs  template.rs  testutil.rs  tracing_setup.rs  typst_world.rs  watcher.rs
src/routes/: error.rs  html.rs  mod.rs  nais.rs  pdf.rs  swagger.rs
templates/dsopkontroll/: kontrollforespoersel.typ
templates/pale-2/: pale-2.typ
templates/syfosoknader/: arbeidstakere.typ
tests/: docker_image_test.rs
