[package]
name = "pdfgenrs"
version = "0.1.0"
edition = "2021"
description = "Library written in Rust used to create PDFs through an API"
license = "MIT"

[[bin]]
name = "pdfgenrs"
path = "src/main.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "net", "signal"] }
axum = "0.8.9"
serde_json = "1.0.149"
chrono = "0.4.44"
walkdir = "2.5.0"
anyhow = "1.0.102"
comemo = "0.5.1"
typst = "0.14.2"
typst-html = "0.14.2"
typst-pdf = "0.14.2"
typst-library = "0.14.2"
typst-syntax = "0.14.2"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt", "tracing-log"] }
tracing-opentelemetry = "0.32.0"
tracing-log = "0.2.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace", "rt-tokio"] }
tower-http = { version = "0.6.10", features = ["trace"] }
ironpress = "1.4.3"

[dev-dependencies]
axum-test = "20.0.0"
reqwest = { version = "0.13.3", features = ["json"] }
tempfile = "3.27.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
