[package]
name = "pdfgenrs"
version = "0.1.0"
edition = "2024"
description = "Library written in Rust used to create PDFs through an API"
license = "MIT"
repository = "https://github.com/navikt/pdfgenrs"
homepage = "https://github.com/navikt/pdfgenrs"
keywords = ["pdf", "typst", "api"]
categories = ["web-programming"]

[[bin]]
name = "pdfgenrs"
path = "src/main.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[[bench]]
name = "criterion_bench"
path = "benches/criterion_bench.rs"
harness = false

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "net", "signal"] }
axum = "0.8.9"
serde_json = "1.0.150"
chrono = "0.4.44"
walkdir = "2.5.0"
anyhow = "1.0.102"
comemo = "0.5.1"
typst = "0.14.2"
typst-html = "0.14.2"
typst-pdf = "0.14.2"
typst-library = "0.14.2"
typst-syntax = "0.14.2"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt", "tracing-log"] }
tracing-opentelemetry = "0.33.0"
tracing-log = "0.2.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
tower-http = { version = "0.6.11", features = ["trace", "limit"] }
ironpress = "1.4.3"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
axum-test = "20.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13.4", features = ["json"] }
tempfile = "3.27.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
