[package]
name = "pdfgenrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
description = "Application written in Rust used to create PDFs through an API"
license = "MIT"
repository = "https://github.com/navikt/pdfgenrs"
homepage = "https://github.com/navikt/pdfgenrs"
keywords = ["pdf", "typst", "api"]
categories = ["web-programming"]

[[bin]]
name = "pdfgenrs"
path = "src/main.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[[bench]]
name = "criterion_bench"
path = "benches/criterion_bench.rs"
harness = false

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "net", "signal"] }
axum = "0.8.9"
serde_json = "1.0.150"
time = { version = "0.3.51", features = ["local-offset", "formatting"] }
walkdir = "2.5.0"
anyhow = "1.0.102"
comemo = "0.5.1"
typst = "0.15.0"
typst-html = "0.15.0"
typst-pdf = "0.15.0"
typst-layout = "0.15.0"
typst-library = "0.15.0"
typst-syntax = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "tracing-log"] }
tracing-opentelemetry = "0.33.0"
tracing-log = "0.2.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
tower-http = { version = "0.7.0", features = ["trace", "limit"] }
ironpress = "1.4.3"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
axum-test = "20.1.0"
http-body-util = "0.1.3"
reqwest = { version = "0.13.4", features = ["json"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"
panic_in_result_fn = "warn"
inefficient_to_string = "warn"
cognitive_complexity = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
